; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/cabinet/extr_fci.c_close_temp_file.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/cabinet/extr_fci.c_close_temp_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 (i32, i32*, i32)*, i32 (i32, i32*, i32)*, i32 }
%struct.temp_file = type { i32, i32 }

@TRUE = common dso_local global i32 0, align 4
@FCIERR_TEMP_FILE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*, %struct.temp_file*)* @close_temp_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @close_temp_file(%struct.TYPE_4__* %0, %struct.temp_file* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca %struct.temp_file*, align 8
  %6 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %4, align 8
  store %struct.temp_file* %1, %struct.temp_file** %5, align 8
  %7 = load %struct.temp_file*, %struct.temp_file** %5, align 8
  %8 = getelementptr inbounds %struct.temp_file, %struct.temp_file* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = icmp eq i32 %9, -1
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = load i32, i32* @TRUE, align 4
  store i32 %12, i32* %3, align 4
  br label %53

13:                                               ; preds = %2
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load i32 (i32, i32*, i32)*, i32 (i32, i32*, i32)** %15, align 8
  %17 = load %struct.temp_file*, %struct.temp_file** %5, align 8
  %18 = getelementptr inbounds %struct.temp_file, %struct.temp_file* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 2
  %22 = load i32, i32* %21, align 8
  %23 = call i32 %16(i32 %19, i32* %6, i32 %22)
  %24 = icmp eq i32 %23, -1
  br i1 %24, label %25, label %31

25:                                               ; preds = %13
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %27 = load i32, i32* @FCIERR_TEMP_FILE, align 4
  %28 = load i32, i32* %6, align 4
  %29 = call i32 @set_error(%struct.TYPE_4__* %26, i32 %27, i32 %28)
  %30 = load i32, i32* @FALSE, align 4
  store i32 %30, i32* %3, align 4
  br label %53

31:                                               ; preds = %13
  %32 = load %struct.temp_file*, %struct.temp_file** %5, align 8
  %33 = getelementptr inbounds %struct.temp_file, %struct.temp_file* %32, i32 0, i32 0
  store i32 -1, i32* %33, align 4
  %34 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %35 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %34, i32 0, i32 1
  %36 = load i32 (i32, i32*, i32)*, i32 (i32, i32*, i32)** %35, align 8
  %37 = load %struct.temp_file*, %struct.temp_file** %5, align 8
  %38 = getelementptr inbounds %struct.temp_file, %struct.temp_file* %37, i32 0, i32 1
  %39 = load i32, i32* %38, align 4
  %40 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %41 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %40, i32 0, i32 2
  %42 = load i32, i32* %41, align 8
  %43 = call i32 %36(i32 %39, i32* %6, i32 %42)
  %44 = icmp eq i32 %43, -1
  br i1 %44, label %45, label %51

45:                                               ; preds = %31
  %46 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %47 = load i32, i32* @FCIERR_TEMP_FILE, align 4
  %48 = load i32, i32* %6, align 4
  %49 = call i32 @set_error(%struct.TYPE_4__* %46, i32 %47, i32 %48)
  %50 = load i32, i32* @FALSE, align 4
  store i32 %50, i32* %3, align 4
  br label %53

51:                                               ; preds = %31
  %52 = load i32, i32* @TRUE, align 4
  store i32 %52, i32* %3, align 4
  br label %53

53:                                               ; preds = %51, %45, %25, %11
  %54 = load i32, i32* %3, align 4
  ret i32 %54
}

declare dso_local i32 @set_error(%struct.TYPE_4__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
